Update liquid  allow for absolute links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,8 @@
   {% if url contains year_path %}
     {% for project in year.projects %}
       {% assign project_path = year_path | append: '/' | append: project.path %}
+      {% if project.path contains "https://" %}
+        {% assign project_path = project.path %}
       {% if debug_mode %}
         <p>project_path: {{project_path | inspect }}</p>
       {% endif %}
