--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
       {% assign project_path = year_path | append: '/' | append: project.path %}
       {% if project.path contains "https://" %}
         {% assign project_path = project.path %}
+      {% endif %}
       {% if debug_mode %}
         <p>project_path: {{project_path | inspect }}</p>
       {% endif %}
