--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   Debug messages will be renedered if this is true
   Use this to debug issues on the GitHub Pages site.
 {%- endcomment -%}
-{% assign debug_mode = true %}
+{% assign debug_mode = false %}
 
 {%comment%} Determine if the current page is for a particular year or project {%endcomment%}
 
@@ -27,17 +27,10 @@
     active_year will be assigned to either the most recent year or the currently selected year
     (if the url contains the year's url the loop will break)
   {%- endcomment -%}
-  {% assign active_year = year %}
+  {% assign active_year = year%}
   {% if url contains year_path %}
     {% for project in year.projects %}
-      {% if debug_mode %}
-        <p>project.path: {{project.path | inspect }}</p>
-      {% endif %}
-      {% if project.path contains "://" %}
-        {% assign project_path = project.path %}
-      {% else %}
-        {% assign project_path = year_path | append: '/' | append: project.path %}
-      {% endif %}
+      {% assign project_path = year_path | append: '/' | append: project.path %}
       {% if debug_mode %}
         <p>project_path: {{project_path | inspect }}</p>
       {% endif %}
@@ -138,7 +131,11 @@
             {% if active_year.path == year.path %}
               <div class="sub-menu">
               {% for project in year.projects %}
-                {% assign project_path = year_path | append: '/' | append: project.path %}
+                {% if project.path contains "://" %}
+                  {% assign project_path = project.path %}
+                {% else %}
+                  {% assign project_path = year_path | append: '/' | append: project.path %}
+                {% endif %}
                 <li class="nav-link">
                   <a href="{{project_path}}">{{project.name}}</a>
                 </li>
