--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   Debug messages will be renedered if this is true
   Use this to debug issues on the GitHub Pages site.
 {%- endcomment -%}
-{% assign debug_mode = true %}
+{% assign debug_mode = false %}
 
 {%comment%} Determine if the current page is for a particular year or project {%endcomment%}
 
